<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_splash">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.amary.sisosmed.presentation.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_post"
            app:destination="@id/navigation_post" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.amary.sisosmed.presentation.ui.main.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.amary.sisosmed.presentation.ui.main.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_navigation_setting_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.amary.sisosmed.presentation.ui.auth.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.amary.sisosmed.presentation.ui.auth.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.amary.sisosmed.presentation.ui.splash.SplashFragment"
        android:label="@string/title_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_navigation_splash_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_splash_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <dialog
        android:id="@+id/navigation_detail"
        android:name="com.amary.sisosmed.presentation.ui.main.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />

    <dialog
        android:id="@+id/navigation_post"
        android:name="com.amary.sisosmed.presentation.ui.main.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />

</navigation>