<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/prompt_medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/value_40sp"
        android:layout_marginTop="@dimen/value_120dp"
        app:drawableStartCompat="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_email"
        style="@style/Theme.SiSosmed.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/value_32dp"
        android:layout_marginTop="@dimen/value_70dp"
        app:errorTextAppearance="@style/Theme.SiSosmed.ErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            style="@style/Theme.SiSosmed.TextInputEditText"
            android:background="@drawable/bg_rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_password"
        style="@style/Theme.SiSosmed.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/value_32dp"
        android:layout_marginTop="@dimen/value_16dp"
        app:endIconMode="password_toggle"
        app:errorTextAppearance="@style/Theme.SiSosmed.ErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            style="@style/Theme.SiSosmed.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_primary"
        android:layout_margin="@dimen/value_32dp"
        android:text="@string/title_sign_in"
        android:fontFamily="@font/prompt_medium"
        android:textSize="@dimen/value_16sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_register_ask"
        android:layout_marginTop="@dimen/value_24dp"
        android:textColor="@color/black"
        android:textSize="@dimen/value_14sp"
        android:fontFamily="@font/prompt_medium"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>