<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/value_21dp"
    android:layout_marginBottom="@dimen/value_16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nice_blue_6">

        <ImageView
            android:id="@+id/img_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_150dp"
            android:background="@android:color/holo_blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/title_image_list_home" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/value_0dp"
            android:layout_margin="@dimen/value_16dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/value_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_list" />

        <ImageButton
            android:layout_width="@dimen/value_32dp"
            android:layout_height="@dimen/value_32dp"
            android:layout_margin="@dimen/value_16dp"
            android:background="@drawable/ic_favorite"
            android:backgroundTint="@android:color/holo_red_dark"
            android:contentDescription="@string/title_icon_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>