<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.main.favorite.FavoriteFragment">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_50dp"
        android:layout_marginStart="@dimen/value_36dp"
        android:text="@string/title_hello"
        android:textColor="@color/black"
        android:textSize="@dimen/value_12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/value_16sp"
        android:fontFamily="@font/prompt_medium"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="@+id/tv_hello"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/value_40dp"
        android:layout_height="@dimen/value_40dp"
        android:layout_marginEnd="@dimen/value_36dp"
        app:civ_border_color="?attr/colorPrimary"
        app:civ_border_width="@dimen/value_2dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_hello"
        android:src="@drawable/ic_profile"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_36dp"
        android:fontFamily="@font/prompt_medium"
        android:text="@string/msg_favorite"
        android:textColor="@color/black"
        android:textSize="@dimen/value_24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/value_24dp"
        android:layout_marginTop="@dimen/value_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/item_list" />

</androidx.constraintlayout.widget.ConstraintLayout>