<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.main.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarTransaction"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_332dp"
        android:background="@null"
        android:elevation="@dimen/value_0dp"
        app:elevation="@dimen/value_0dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.SiSosmed.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:scrimAnimationDuration="0"
            app:scrimVisibleHeightTrigger="@dimen/value_0dp"
            app:layout_collapseMode="pin"
            app:titleEnabled="false"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.SiSosmed.PopupOverlay">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/value_16dp">

                    <TextView
                        android:id="@+id/tv_hello"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/value_60dp"
                        android:layout_marginStart="@dimen/value_24dp"
                        android:text="@string/title_hello"
                        android:textColor="@color/white"
                        android:textSize="@dimen/value_12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/value_16sp"
                        android:fontFamily="@font/prompt_medium"
                        android:text="@string/app_name"
                        app:layout_constraintStart_toStartOf="@+id/tv_hello"
                        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_profile"
                        android:layout_width="@dimen/value_40dp"
                        android:layout_height="@dimen/value_40dp"
                        android:layout_marginEnd="@dimen/value_36dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_hello"
                        android:src="@drawable/ic_profile"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/value_8dp"
                        app:cardCornerRadius="@dimen/value_36dp"
                        app:cardElevation="@dimen/value_0dp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
                        app:layout_constraintEnd_toStartOf="@+id/img_profile"
                        app:layout_constraintTop_toTopOf="@+id/img_profile">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingVertical="@dimen/value_8dp">

                            <ImageView
                                android:id="@+id/img_icon_create"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/value_8dp"
                                android:src="@drawable/ic_create"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:tint="?attr/colorPrimary"
                                android:contentDescription="@string/title_icon_create_status" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/value_8dp"
                                android:layout_marginStart="@dimen/value_16dp"
                                android:fontFamily="@font/prompt_medium"
                                android:text="@string/title_post"
                                android:textColor="?attr/colorPrimary"
                                android:textSize="@dimen/value_16sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/img_icon_create"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <include layout="@layout/fragment_home_content" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>